refactor(test): improve service root resolution in ServerPortConsistencyTest